# sstracking_metrics

./: .gitignore  README.md  THIRD_PARTY_LICENSES.txt  dummy_example.py  dummy_example_metrics.py  pyproject.toml  requirements.txt  utils_dataset.py
dummy_examples/: dummy_example_detection_localization_association_results_bootstrap.yaml  dummy_example_detection_localization_association_stats_bootstrap.yaml
src/sstracking_metrics/: association.py  detection.py  localization.py  locata.py  metric_evaluator.py  utils_dataset.py  utils_metrics.py
